# cloud-scraper

./: .gitignore  README.md  cloud-scraper.desktop  cloud-scraper.spec  pyproject.toml  requirements.txt  setup.sh
data_scraper/: __init__.py  __main__.py  app.py  iso_builder.py  iso_helper.sh  window.py
data_scraper/providers/: apple.py  base.py  google.py  microsoft.py
data_scraper/utils/: auth.py  storage.py
data_scraper/widgets/: data_type_row.py  iso_dialog.py  progress_panel.py  provider_card.py
debian/: changelog  cloud-scraper.desktop  cloud-scraper.postinst  cloud-scraper.sh  control  data-scraper.desktop  data-scraper.sh  rules
resources/: data-scraper.gresource.xml
